--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flame: ^1.8.2
   flame_audio: ^1.0.0
   flare_flutter: ^3.0.0
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
